removed section moved sections formats to css

--- a/bottom.html
+++ b/bottom.html
@@ -27,71 +27,68 @@
       </nav>
 
     <main  style="text-align: left;">
-        <section>
-            <h1>Bottom</h1>
-            <div>
-                <div>From Wikipedia, the free encyclopedia</div>
-                <div>Look up <i><b><a title="wiktionary:bottom">bottom</a></b></i>&nbsp;or <i><b><a title="wiktionary:bottoms">bottoms</a></b></i> in Wiktionary, the free dictionary.</div>
-            </div>
-            <p><b>Bottom</b> may refer to: 
-            </p>
-            <ul>
-                <li><span>1</span> <span>Anatomy and sex</span></li>
-                <li><span>2</span> <span>Arts, entertainment, and media</span></li>
-                <li><span>3</span> <span>Geography</span></li>
-                <li><span>4</span> <span>Mathematics</span></li>
-                <li><span>5</span> <span>People</span></li>
-                <li><span>6</span> <span>Other uses</span></li>
-                <li><span>7</span> <span>See also</span></li>
-            </ul>
-    <h2><span >Anatomy and sex</span><span ><span ></span><a title=" section: Anatomy and sex"></a><span ></span></span></h2>
-    <ul><li><a title="Bottom (BDSM)">Bottom (BDSM)</a>, the partner in a BDSM who takes the passive, receiving, or obedient role, to that of the top or dominant</li>
-        <li><a title="Bottom (sex)">Bottom (sex)</a>, a term used by gay couples and BDSM</li>
-        <li><a title="Buttocks">Buttocks</a> or bottom, part of the anatomy on the posterior of the pelvic region of apes and humans, and many other bipeds or quadrupeds</li></ul>
-        <h2><span></span><span >Arts, entertainment, and media</span><span ><span ></span><a title=" section: Arts, entertainment, and media"></a><span ></span></span></h2>
-        <ul><li><a title="Bottom (TV series)"><i>Bottom</i> (TV series)</a>, a British sitcom and stage show</li>
-            <li>"Bottom", a song by Puddle of Mudd from <i><a title="Life On Display">Life On Display</a></i></li>
-            <li>"Bottom", a song by Tool from <i><a title="Undertow (Tool album)">Undertow</a></i></li>
-            <li><a title="Nick Bottom">Nick Bottom</a>, a character from Shakespeare's <i>A Msummer Night's Dream</i></li>
-            <li><a title="The Bottoms (novel)"><i>The Bottoms</i> (novel)</a>, a 2000 novel by Joe R. Lansdale</li>
-            <li><i>Bottoms</i>, a 1966 film by <a title="Yoko Ono">Yoko Ono</a></li></ul>
-            <h2><span >Geography</span><span ><span ></span><a title=" section: Geography"></a><span ></span></span></h2>
-            <ul><li><a title="Bottom (valley)">Bottom (valley)</a>, the floor of a valley
-                <ul><li><a title="List of geographical bottoms">List of geographical bottoms</a>, list of geographical features called "bottom"</li></ul></li>
-                <li><a title="Bottomland (freshwater ecology)">Bottomland (freshwater ecology)</a>, low-lying alluvial land adjacent to a river</li>
-                <li><a title="Foggy Bottom">Foggy Bottom</a>, a neighborhood in Washington, D.C.</li>
-                <li><a title="Lower Bottoms, Oakland, California">Lower Bottoms, Oakland, California</a> or The Bottoms, a neighborhood in Oakland, California, U.S.</li>
-                <li>St. Paul's Bottoms or The Bottoms, a neighborhood in <a title="Shreveport, Louisiana">Shreveport, Louisiana</a></li>
-                <li><a title="Seabed">Seabed</a>, the floor of the ocean or ocean bottom</li>
-                <li><a title="Stream bed">Stream bed</a>, the channel bottom of a stream, river or creek</li>
-                <li><a title="The Bottom">The Bottom</a>, capital of the island of Saba</li>
-                <li><a title="The Bottom (neighborhood in Dallas, Texas)">The Bottom (neighborhood in Dallas, Texas)</a>, a neighborhood in the Tenth Street Freedman's Town, Dallas, Texas, U.S.</li>
-                <li>The Bottoms, an area in <a title="Franklinton (Columbus, Ohio)">Franklinton (Columbus, Ohio)</a>, United States</li>
-            </ul>
-            <h2><span>Mathematics</span><span ><span ></span><a title=" section: Mathematics"></a><span ></span></span></h2>
-            <ul><li>Bottom, or <i>falsum</i>, a <a title="Contradiction">contradiction</a> in logic and Boolean algebra</li>
-                <li><a title="Bottom element">Bottom element</a>, in lattice theory and related branches of mathematics</li>
-                <li><a title="Bottom type">Bottom type</a>, or empty type, in type theory</li>
-                <li>The symbol <a title="Up tack">up tack</a> (⊥), used to represent these concepts</li>
-            </ul>
-            <h2><span>People</span><span ><span ></span><a title=" section: People"></a><span ></span></span></h2>
-            <ul><li><a title="Bottom (surname)">Bottom (surname)</a>, people with the surname Bottom</li>
-                <li><a title="Bottoms (surname)">Bottoms (surname)</a>, people with the surname Bottoms</li>
-            </ul>
-            <h2><span>Other uses</span><span ><span ></span><a title=" section: Other uses"></a><span ></span></span></h2>
-            <ul><li><a title="Bottom (technical analysis)">Bottom (technical analysis)</a>, a chart pattern in the technical analysis of securities</li>
-                <li><a title="Bottom quark">Bottom quark</a>, a subatomic particle</li>
-                <li><a title="Trousers">Trousers</a>, <a title="Shorts">Shorts</a> and other "bottom wear", pieces of clothing to cover the lower portion of the body, particularly the legs.</li>
-            </ul>
-            <h2><span>See also</span><span ><span ></span><a title=" section: See also"></a><span ></span></span></h2>
-            <ul><li><a title="Bott">Bott</a></li>
-                <li><a title="Bottoming (disambiguation)">Bottoming (disambiguation)</a></li>
-                <li><a title="Bottomry">Bottomry</a></li>
-                <li><span><a title="Special:PrefixIndex/Bottom">All pages with titles beginning with <i>Bottom </i></a></span></li>
-                <li><span><a title="Special:Search/intitle:&quot;Bottom&quot;">All pages with titles containing <i>Bottom</i></a></span></li>
-            </ul>
-            <div style="text-align: left;" data-nosnippet=>Retrieved from "<a dir="ltr" href="https://en.wikipedia.org/w/index.php?title=Bottom&amp;old=1107348528">https://en.wikipedia.org/w/index.php?title=Bottom&amp;old=1107348528</a>"</div>
-        </section>
+        <h1>Bottom</h1>
+        <div>
+            <p>From Wikipedia, the free encyclopedia</p>
+            <p>Look up <i><b>bottom</b></i>&nbsp;or <i><b> bottoms</b></i> in Wiktionary, the free dictionary.</p>
+        </div>
+        <p><b>Bottom</b> may refer to: 
+        </p>
+        <ul>
+            <li><span>1</span> <span>Anatomy and sex</span></li>
+            <li><span>2</span> <span>Arts, entertainment, and media</span></li>
+            <li><span>3</span> <span>Geography</span></li>
+            <li><span>4</span> <span>Mathematics</span></li>
+            <li><span>5</span> <span>People</span></li>
+            <li><span>6</span> <span>Other uses</span></li>
+            <li><span>7</span> <span>See also</span></li>
+        </ul>
+<h2><span >Anatomy and sex</span><span ><span ></span><span ></span></span></h2>
+<ul><li>Bottom (BDSM), the partner in a BDSM who takes the passive, receiving, or obedient role, to that of the top or dominant</li>
+    <li>Bottom (sex), a term used by gay couples and BDSM</li>
+    <li>Buttocks or bottom, part of the anatomy on the posterior of the pelvic region of apes and humans, and many other bipeds or quadrupeds</li></ul>
+    <h2><span></span><span >Arts, entertainment, and media</span><span ><span ></span><span ></span></span></h2>
+    <ul><li><i>Bottom</i> (TV series), a British sitcom and stage show</li>
+        <li>"Bottom", a song by Puddle of Mudd from <i>Life On Display</i></li>
+        <li>"Bottom", a song by Tool from <i>Undertow</i></li>
+        <li>Nick Bottom, a character from Shakespeare's <i>A Msummer Night's Dream</i></li>
+        <li><i>The Bottoms</i> (novel), a 2000 novel by Joe R. Lansdale</li>
+        <li><i>Bottoms</i>, a 1966 film by  title="Yoko Ono">Yoko Ono</li></ul>
+        <h2><span >Geography</span><span ><span ></span><span ></span></span></h2>
+        <ul><li>Bottom (valley), the floor of a valley
+            <ul><li>List of geographical bottoms, list of geographical features called "bottom"</li></ul></li>
+            <li>Bottomland (freshwater ecology), low-lying alluvial land adjacent to a river</li>
+            <li>Foggy Bottom, a neighborhood in Washington, D.C.</li>
+            <li>Lower Bottoms, Oakland, California or The Bottoms, a neighborhood in Oakland, California, U.S.</li>
+            <li>St. Paul's Bottoms or The Bottoms, a neighborhood in Shreveport, Louisiana</li>
+            <li>Seabed, the floor of the ocean or ocean bottom</li>
+            <li>Stream bed, the channel bottom of a stream, river or creek</li>
+            <li>The Bottom, capital of the island of Saba</li>
+            <li>The Bottom (neighborhood in Dallas, Texas), a neighborhood in the Tenth Street Freedman's Town, Dallas, Texas, U.S.</li>
+            <li>Franklinton (Columbus, Ohio), United States</li>
+        </ul>
+        <h2><span>Mathematics</span><span ><span ></span><span ></span></span></h2>
+        <ul><li>Bottom, or <i>falsum</i>, a contradiction in logic and Boolean algebra</li>
+            <li>Bottom element, in lattice theory and related branches of mathematics</li>
+            <li>Bottom type, or empty type, in type theory</li>
+            <li>The symbol up tack (⊥), used to represent these concepts</li>
+        </ul>
+        <h2><span>People</span><span ><span ></span><span ></span></span></h2>
+        <ul><li>Bottom (surname), people with the surname Bottom</li>
+            <li>Bottoms (surname), people with the surname Bottoms</li>
+        </ul>
+        <h2><span>Other uses</span><span ><span ></span><span ></span></span></h2>
+        <ul><li>Bottom (technical analysis), a chart pattern in the technical analysis of securities</li>
+            <li>Bottom quark, a subatomic particle</li>
+            <li>Trousers, Shorts and other "bottom wear", pieces of clothing to cover the lower portion of the body, particularly the legs.</li>
+        </ul>
+        <h2><span>See also</span><span ><span ></span><span ></span></span></h2>
+        <ul><li>Bott</li>
+            <li>Bottoming (disambiguation)</li>
+            <li>Bottomry</li>
+            <li><span>All pages with titles beginning with <i>Bottom </i></span></li>
+            <li><span>All pages with titles containing <i>Bottom</i></span></li>
+        </ul>
     </main>
 </body>
 </html>
