--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
         <a class="sidebar" href="https://orrstuff.com/bottom">Bottom</a>
       </div>
     </nav>
+
     <main>
-    <section>
       <h1 style="text-align: center;">Welcome!</h1>
-      <p>This is a website that I put together for fun. I enjoy programming and making stuff (LOL, because the website is OrrStuff, I'm so clever).</p>
-      <p>One of my goals for this website is to avoid inducing eyestrain in the visitors (you <3).</p>
-      <p>I accomplish this by using darker colors. Even these letters are a light grey instead of white.</p>
+      <p>This is a website that I put together for fun.
+        I enjoy programming and making stuff (LOL, because the website is OrrStuff, I'm so clever).</p>
+      <p>One of my goals for this website is to avoid inducing eyestrain in the visitors (you❤️).
+        I accomplish this by using darker colors.
+        Even these letters are a light grey instead of white.</p>
       <p>While I don't want the website to hurt your eyes, I am okay with the jokes making you hate me.</p>
-    </section>
-    <section>
       <p>HaHaHa!</p>
-    </section>
     </main>
+
     </body>
   </body>
   
