--- a/about.html
+++ b/about.html
@@ -26,36 +26,25 @@
     </div>
     </nav>
     <main>
-    <section>
-      <h1>a·bout</h1>
-      <p>/əˈbout/</p>
-      <br>
-      <ol>
-        <p>preposition: about</p>
-        <li>on the subject of; concerning.<br>"I was thinking about you"</li>
-        <ul>
-            <li>so as to affect.<br>"there's nothing we can do about it"</li>
-        </ul>
-        <li>used to indicate movement within a particular area.<br>"she looked about the room"</li>
-        <li>used to express location in a particular place.<br>"rugs strewn about the hall"</li>
-        <ul>
-            <li>used to describe a quality apparent in a person.<br>"there was a look about her that said everything"</li>
-          </ul>
-      </ol>
-        
-      <br>
-      <ol>
-        <p>adverb: about</p>
-        <li>used to indicate movement in an area.<br>"men were floundering about"</li>
-        <li>used to express location in a particular place.<br>"there was a lot of flu about"</li>
-        <li>(used with a number or quantity) approximately.<br>"reduced by about 5 percent"</li>
+        <h1>a·bout</h1>
+        <p>/əˈbout/</p>
+        <ol>
+            <p>preposition: about</p>
+            <li>on the subject of; concerning.<br>"I was thinking about you"</li>
+            <ul><li>so as to affect.<br>"there's nothing we can do about it"</li></ul>
+            <li>used to indicate movement within a particular area.<br>"she looked about the room"</li>
+            <li>used to express location in a particular place.<br>"rugs strewn about the hall"</li>
+            <ul><li>used to describe a quality apparent in a person.<br>"there was a look about her that said everything"</li></ul>
+        </ol>
+        <ol>
+            <p>adverb: about</p>
+            <li>used to indicate movement in an area.<br>"men were floundering about"</li>
+            <li>used to express location in a particular place.<br>"there was a lot of flu about"</li>
+            <li>(used with a number or quantity) approximately.<br>"reduced by about 5 percent"</li>
         </ol>
     
       <br>
-      <br>
-      <br>
       <p>Definition from <a class="main" href="https://languages.oup.com/google-dictionary-en/">Oxford Languages</a> on Google</p>
-    </section>
     </main>
     </body>
   </body>
