put a box in main

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
     </div>
     </nav>
     <main>
+        <div class="right-side-box">
         <h1>a·bout</h1>
         <p>/əˈbout/</p>
         <ol>
@@ -45,6 +46,7 @@
     
       <br>
       <p>Definition from <a class="main" href="https://languages.oup.com/google-dictionary-en/">Oxford Languages</a> on Google</p>
+      </div>
     </main>
     </body>
   </body>
