--- a/bottom.html
+++ b/bottom.html
@@ -27,6 +27,7 @@
       </nav>
 
     <main  style="text-align: left;">
+        <div class="right-side-box">
         <h1>Bottom</h1>
         <div>
             <p>From Wikipedia, the free encyclopedia</p>
@@ -89,6 +90,7 @@
             <li><span>All pages with titles beginning with <i>Bottom </i></span></li>
             <li><span>All pages with titles containing <i>Bottom</i></span></li>
         </ul>
+        </div>
     </main>
 </body>
 </html>
