--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </nav>
 
     <main>
+      <div class="right-side-box">
       <h1 style="text-align: center;">Welcome!</h1>
       <p>This is a website that I put together for fun.
         I enjoy programming and making stuff (LOL, because the website is OrrStuff, I'm so clever).</p>
@@ -35,6 +36,7 @@
         Even these letters are a light grey instead of white.</p>
       <p>While I don't want the website to hurt your eyes, I am okay with the jokes making you hate me.</p>
       <p>HaHaHa!</p>
+      </div>
     </main>
 
     </body>
