added audio folder

--- a/about.html
+++ b/about.html
@@ -27,7 +27,11 @@
     </nav>
     <main>
         <div class="right-side-box">
-        <h1>a·bout</h1>
+        <h1>a·bout</h1><audio controls>
+            <source src="horse.ogg" type="audio/ogg">
+            <source src="horse.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
         <p>/əˈbout/</p>
         <ol>
             <p>preposition: about</p>
