--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
     <main>
         <div class="right-side-box">
         <h1>a·bout</h1><audio controls>
-            <source src="audio/aboutdefine.ogg" type="audio/ogg">
-            <source src="audio/aboutdefine.mp3" type="audio/mpeg">
+            <source src="audio/aboutdefine2.ogg" type="audio/ogg">
+            <source src="audio/aboutdefine2.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
         <p>/əˈbout/</p>
