--- a/bottom.html
+++ b/bottom.html
@@ -36,7 +36,7 @@
         <p><b>Bottom</b> may refer to: 
         </p>
         <ul>
-            <li><span>1</span> <span>Anatomy and sex</span></li>
+            <li><span>1</span> <span>Anatomy</span></li>
             <li><span>2</span> <span>Arts, entertainment, and media</span></li>
             <li><span>3</span> <span>Geography</span></li>
             <li><span>4</span> <span>Mathematics</span></li>
@@ -44,20 +44,18 @@
             <li><span>6</span> <span>Other uses</span></li>
             <li><span>7</span> <span>See also</span></li>
         </ul>
-<h2><span >Anatomy and sex</span><span ><span ></span><span ></span></span></h2>
-<ul><li>Bottom (BDSM), the partner in a BDSM who takes the passive, receiving, or obedient role, to that of the top or dominant</li>
-    <li>Bottom (sex), a term used by gay couples and BDSM</li>
-    <li>Buttocks or bottom, part of the anatomy on the posterior of the pelvic region of apes and humans, and many other bipeds or quadrupeds</li></ul>
+<h2><span >Anatomy</span><span ><span ></span><span ></span></span></h2>
+<ul><li>Buttocks or bottom, part of the anatomy on the posterior of the pelvic region of apes and humans, and many other bipeds or quadrupeds</li></ul>
     <h2><span></span><span >Arts, entertainment, and media</span><span ><span ></span><span ></span></span></h2>
-    <ul><li><i>Bottom</i> (TV series), a British sitcom and stage show</li>
+    <ul>
         <li>"Bottom", a song by Puddle of Mudd from <i>Life On Display</i></li>
         <li>"Bottom", a song by Tool from <i>Undertow</i></li>
         <li>Nick Bottom, a character from Shakespeare's <i>A Msummer Night's Dream</i></li>
         <li><i>The Bottoms</i> (novel), a 2000 novel by Joe R. Lansdale</li>
         <li><i>Bottoms</i>, a 1966 film by  title="Yoko Ono">Yoko Ono</li></ul>
-        <h2><span >Geography</span><span ><span ></span><span ></span></span></h2>
-        <ul><li>Bottom (valley), the floor of a valley
-            <ul><li>List of geographical bottoms, list of geographical features called "bottom"</li></ul></li>
+    <h2><span >Geography</span><span ><span ></span><span ></span></span></h2>
+    <ul><li>Bottom (valley), the floor of a valley
+        <ul><li>List of geographical bottoms, list of geographical features called "bottom"</li></ul></li>
             <li>Bottomland (freshwater ecology), low-lying alluvial land adjacent to a river</li>
             <li>Foggy Bottom, a neighborhood in Washington, D.C.</li>
             <li>Lower Bottoms, Oakland, California or The Bottoms, a neighborhood in Oakland, California, U.S.</li>
@@ -67,30 +65,27 @@
             <li>The Bottom, capital of the island of Saba</li>
             <li>The Bottom (neighborhood in Dallas, Texas), a neighborhood in the Tenth Street Freedman's Town, Dallas, Texas, U.S.</li>
             <li>Franklinton (Columbus, Ohio), United States</li>
-        </ul>
-        <h2><span>Mathematics</span><span ><span ></span><span ></span></span></h2>
-        <ul><li>Bottom, or <i>falsum</i>, a contradiction in logic and Boolean algebra</li>
-            <li>Bottom element, in lattice theory and related branches of mathematics</li>
-            <li>Bottom type, or empty type, in type theory</li>
-            <li>The symbol up tack (⊥), used to represent these concepts</li>
-        </ul>
-        <h2><span>People</span><span ><span ></span><span ></span></span></h2>
-        <ul><li>Bottom (surname), people with the surname Bottom</li>
-            <li>Bottoms (surname), people with the surname Bottoms</li>
-        </ul>
-        <h2><span>Other uses</span><span ><span ></span><span ></span></span></h2>
-        <ul><li>Bottom (technical analysis), a chart pattern in the technical analysis of securities</li>
-            <li>Bottom quark, a subatomic particle</li>
-            <li>Trousers, Shorts and other "bottom wear", pieces of clothing to cover the lower portion of the body, particularly the legs.</li>
-        </ul>
-        <h2><span>See also</span><span ><span ></span><span ></span></span></h2>
-        <ul><li>Bott</li>
-            <li>Bottoming (disambiguation)</li>
-            <li>Bottomry</li>
-            <li><span>All pages with titles beginning with <i>Bottom </i></span></li>
-            <li><span>All pages with titles containing <i>Bottom</i></span></li>
-        </ul>
-        </div>
+    </ul>
+    <h2><span>Mathematics</span><span ><span ></span><span ></span></span></h2>
+    <ul><li>Bottom, or <i>falsum</i>, a contradiction in logic and Boolean algebra</li>
+        <li>Bottom element, in lattice theory and related branches of mathematics</li>
+        <li>Bottom type, or empty type, in type theory</li>
+        <li>The symbol up tack (⊥), used to represent these concepts</li>
+    </ul>
+    <h2><span>People</span><span ><span ></span><span ></span></span></h2>
+    <ul><li>Bottom (surname), people with the surname Bottom</li>
+        <li>Bottoms (surname), people with the surname Bottoms</li>
+    </ul>
+    <h2><span>Other uses</span><span ><span ></span><span ></span></span></h2>
+    <ul><li>Bottom (technical analysis), a chart pattern in the technical analysis of securities</li>
+        <li>Bottom quark, a subatomic particle</li>
+        <li>Trousers, Shorts and other "bottom wear", pieces of clothing to cover the lower portion of the body, particularly the legs.</li>
+    </ul>
+    <h2><span>See also</span><span ><span ></span><span ></span></span></h2>
+    <ul><li>Bott</li>
+        <li>Bottomry</li>
+    </ul>
+    </div>
     </main>
 </body>
 </html>
