--- a/bottom.html
+++ b/bottom.html
@@ -52,7 +52,7 @@
         <li>"Bottom", a song by Tool from <i>Undertow</i></li>
         <li>Nick Bottom, a character from Shakespeare's <i>A Msummer Night's Dream</i></li>
         <li><i>The Bottoms</i> (novel), a 2000 novel by Joe R. Lansdale</li>
-        <li><i>Bottoms</i>, a 1966 film by  title="Yoko Ono">Yoko Ono</li></ul>
+        <li><i>Bottoms</i>, a 1966 film by Yoko Ono</li></ul>
     <h2><span >Geography</span><span ><span ></span><span ></span></span></h2>
     <ul><li>Bottom (valley), the floor of a valley
         <ul><li>List of geographical bottoms, list of geographical features called "bottom"</li></ul></li>
